--- a/index.html
+++ b/index.html
@@ -42,21 +42,23 @@
       text-decoration:none;
       color:var(--text);
       font-weight:900;
-      font-size:clamp(22px, 7vw, 34px);
-      padding: 20px 50px;
+      font-size: clamp(18px, 5vw, 32px);
+      padding: 16px 40px;
       border-radius: 999px;
       background: linear-gradient(270deg, #ff002f, #ff334d, #ff002f);
       background-size: 600% 600%;
       animation: pulse 2s infinite, gradientShift 6s ease infinite;
-      box-shadow: 0 0 25px rgba(255,0,47,0.7), 0 0 60px rgba(255,51,77,0.5);
+      box-shadow: 0 0 20px rgba(255,0,47,0.7), 0 0 50px rgba(255,51,77,0.5);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       text-align:center;
+      max-width: 90%;
+      white-space: nowrap;
       overflow: hidden;
     }
 
     a.pulse-btn:hover{
-      transform: scale(1.08);
-      box-shadow: 0 0 40px rgba(255,0,47,0.9), 0 0 100px rgba(255,51,77,0.7);
+      transform: scale(1.05);
+      box-shadow: 0 0 35px rgba(255,0,47,0.9), 0 0 80px rgba(255,51,77,0.7);
     }
 
     a.pulse-btn::after{
@@ -79,7 +81,7 @@
 
     @keyframes pulse {
       0% { transform: scale(1); }
-      50% { transform: scale(1.12); }
+      50% { transform: scale(1.08); }
       100% { transform: scale(1); }
     }
 
@@ -89,11 +91,13 @@
       100% { background-position: 0% 50%; }
     }
 
+    /* Ajuste específico para celulares */
     @media (max-width:600px){
       a.pulse-btn{
-        width: 90%;
-        padding: 18px;
+        width: 85%;
+        padding: 14px;
         font-size: 20px;
+        white-space: normal; /* Quebra linha se precisar */
       }
     }
   </style>
@@ -117,16 +121,14 @@
     resize();
 
     class Particle{
-      constructor(){
-        this.reset();
-      }
+      constructor(){ this.reset(); }
       reset(){
         this.x = Math.random() * canvas.width;
         this.y = Math.random() * canvas.height;
-        this.radius = Math.random()*3 + 1;
-        this.speedX = (Math.random() - 0.5) * 0.6;
-        this.speedY = (Math.random() - 0.5) * 0.6;
-        this.alpha = Math.random()*0.6 + 0.2;
+        this.radius = Math.random()*2.5 + 0.8;
+        this.speedX = (Math.random() - 0.5) * 0.5;
+        this.speedY = (Math.random() - 0.5) * 0.5;
+        this.alpha = Math.random()*0.5 + 0.2;
       }
       update(){
         this.x += this.speedX;
@@ -143,16 +145,11 @@
       }
     }
 
-    for(let i=0;i<120;i++){
-      particles.push(new Particle());
-    }
+    for(let i=0;i<100;i++){ particles.push(new Particle()); }
 
     function animate(){
       ctx.clearRect(0,0,canvas.width,canvas.height);
-      particles.forEach(p=>{
-        p.update();
-        p.draw();
-      });
+      particles.forEach(p=>{ p.update(); p.draw(); });
       requestAnimationFrame(animate);
     }
     animate();
