--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Clique para Continuar</title>
   <style>
     :root{
@@ -13,14 +13,19 @@
     }
 
     html, body{
-      height:100%;
-      margin:0;
+      height: 100%;
+      width: 100%;
+      margin: 0;
+      padding: 0;
       font-family: Inter, sans-serif;
       background: linear-gradient(135deg, var(--bg-1), #40000f, #800018);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      overflow:hidden;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    body{
       position: relative;
     }
 
@@ -31,6 +36,7 @@
       width:100%;
       height:100%;
       z-index:0;
+      display:block;
     }
 
     a.pulse-btn{
@@ -42,23 +48,21 @@
       text-decoration:none;
       color:var(--text);
       font-weight:900;
-      font-size: clamp(18px, 5vw, 32px);
-      padding: 16px 40px;
+      font-size: clamp(18px, 6vw, 28px);
+      padding: 18px 45px;
       border-radius: 999px;
       background: linear-gradient(270deg, #ff002f, #ff334d, #ff002f);
       background-size: 600% 600%;
       animation: pulse 2s infinite, gradientShift 6s ease infinite;
-      box-shadow: 0 0 20px rgba(255,0,47,0.7), 0 0 50px rgba(255,51,77,0.5);
+      box-shadow: 0 0 25px rgba(255,0,47,0.7), 0 0 60px rgba(255,51,77,0.5);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       text-align:center;
       max-width: 90%;
-      white-space: nowrap;
-      overflow: hidden;
     }
 
     a.pulse-btn:hover{
       transform: scale(1.05);
-      box-shadow: 0 0 35px rgba(255,0,47,0.9), 0 0 80px rgba(255,51,77,0.7);
+      box-shadow: 0 0 40px rgba(255,0,47,0.9), 0 0 90px rgba(255,51,77,0.7);
     }
 
     a.pulse-btn::after{
@@ -95,9 +99,8 @@
     @media (max-width:600px){
       a.pulse-btn{
         width: 85%;
-        padding: 14px;
-        font-size: 20px;
-        white-space: normal; /* Quebra linha se precisar */
+        font-size: 18px;
+        padding: 16px;
       }
     }
   </style>
@@ -145,7 +148,7 @@
       }
     }
 
-    for(let i=0;i<100;i++){ particles.push(new Particle()); }
+    for(let i=0;i<120;i++){ particles.push(new Particle()); }
 
     function animate(){
       ctx.clearRect(0,0,canvas.width,canvas.height);
