--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </head>
 <body>
   <canvas id="particles"></canvas>
-  <a class="pulse-btn" href="https://otieu.com/4/9870387" target="_blank" rel="noopener noreferrer">
+  <a class="pulse-btn" href="https://www.revenuecpmgate.com/mrg0qha8?key=04ed8cba32c0ce9115375e74cdb12bf1" target="_blank" rel="noopener noreferrer">
     CLIQUE AQUI PARA CONTINUAR
   </a>
 
@@ -159,3 +159,4 @@
   </script>
 </body>
 </html>
+
